--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -38,10 +38,10 @@ h1 {
 .header {
     width: 100%;
     height: 100vh;
-    background-image: url('../images/2057352.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    transition: .9s ease-in;
 }
 .header-content {
     display: flex;
@@ -49,13 +49,29 @@ h1 {
     align-items: center;
     height: 100%;
 }
-.header-content-right, .header-content-left {
-    flex: 1;
+.header-content-right{
+    flex: 1 1 60%;
     color: #fff;
+}
+.header-content-left {
+    flex: 1 1 40%;
+    color: #fff;
+}
+.header-content-right button {
+    font-size: 1rem;
+    background: rgba(211, 211, 211, 0.349);
+    color: #fff;
+    width: 60px;
+    height: 60px;
+    border: 0;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 0 .4rem;
 }
 .header-content-left h1 {
   font-size: 10rem;
   margin-bottom: 1.5rem;
+  transition: .3s;
 }
 .header-content-left p {
   font-size: 1.3rem;
@@ -64,20 +80,65 @@ h1 {
 }
 .header-content-left button {
   font-size: 1.5rem;
-  background-color: #438E72;
   color: #fff;
   padding: 2rem 3rem;
   border: 0;
   border-radius: 5px;
   cursor: pointer;
+  transition: .9s ease-in;
+}
+.desert {
+  background-color: #885C25;
+}
+.hill {
+  background-color: #438E72;
 }
 .header-content-left button span {
   margin-right: 2rem;
 }
+.flip-card {
+    border-radius: 10px;
+    transition: .3s;
+    margin: 0 1rem;
+}
+.flip1 {
+    animation: flip1 3s 1;
+}
+.flip2 {
+    animation: flip2 3s 1;
+}
+.flip-card img{ 
+    /* width: 350px;
+    height: 500px; */
+    border-radius: 12px;
+}
+.flip-container {
+    display: flex;
+    justify-content: space-around;
+}
+@keyframes flip1 {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@keyframes flip2 {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Slider */
+/* ............ */
 
 /* Nav */
 .nav-background-show {
-    background-color: #438e73f6;
+    background-color: #438e73;
     transition: .3s ease-in-out;
 }
 .nav-background-hide {
@@ -90,7 +151,7 @@ h1 {
     color: #fff;
 }
 nav {
-    height: 15vh;
+    height: 10vh;
     width: 100%;
     display: flex;
     position: fixed;
@@ -148,15 +209,17 @@ nav {
 /* ........................ */
 
 @media (max-width: 1023px) {
+.header-content {
+    flex-direction: column-reverse;
+    height: 100vh;
+    padding: 100px 0;
+}
 .nav-background-show {
     background-color: #438e73;
     transition: .3s ease-in-out;
 }
 nav, .overlay {
     padding: 0 1rem;
-}
-.logo {
-    font-size: 1.1rem;
 }
 nav .navigations a {
     margin-right: 0;
